# toolipie-public

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  PLUGIN_PLATFORM_PLAN.md  README.md  config.yaml  pyproject.toml
input/md-to-docx/: md-to-docx-example.md
input/md-to-pdf/: md-to-pdf-example.md
output/md-to-docx/: md-to-docx-example.docx  run.jsonl
output/md-to-pdf/: run.jsonl
output/pdf-to-png/: run.jsonl
output/png-prep-ocr/: run.jsonl
src/toolipie/: __init__.py  cli.py  core.py
src/toolipie/tools/md_to_docx/: README.md  run.py
src/toolipie/tools/md_to_pdf/: README.md  run.py
src/toolipie/tools/md_to_pdf/assets/presets/: a4_report.css
src/toolipie/tools/pdf_to_png/: README.md  run.py
src/toolipie/tools/png_prep_ocr/: README.md  run.py
src/toolipie/utils/: fs.py  timeit.py
